WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126390
[GTK] Fix mismatched header guards in private WK1 header files
https://bugs.webkit.org/show_bug.cgi?id=126390
Summary
[GTK] Fix mismatched header guards in private WK1 header files
Zan Dobersek
Reported
2014-01-02 11:25:45 PST
[GTK] Fix mismatched header guards in private WK1 header files
Attachments
Patch
(2.54 KB, patch)
2014-01-02 11:28 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2014-01-02 11:28:00 PST
Created
attachment 220237
[details]
Patch
Martin Robinson
Comment 2
2014-01-02 11:31:07 PST
Comment on
attachment 220237
[details]
Patch Nice catch!
Zan Dobersek
Comment 3
2014-01-02 12:56:17 PST
Comment on
attachment 220237
[details]
Patch Clearing flags on attachment: 220237 Committed
r161221
: <
http://trac.webkit.org/changeset/161221
>
Zan Dobersek
Comment 4
2014-01-02 12:56:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug