[GTK] Fix mismatched header guards in private WK1 header files https://bugs.webkit.org/show_bug.cgi?id=126390

Reviewed by Martin Robinson.

Fix three mismatched header guards that are producing warnings when building with Clang.

* webkit/webkitsecurityoriginprivate.h:
* webkit/webkitviewportattributesprivate.h:
* webkit/webkitwebnavigationactionprivate.h:


Canonical link: https://commits.webkit.org/144298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161221 268f45cc-cd09-0410-ab3c-d52691b4dbfc